--- a/index.html
+++ b/index.html
@@ -40,15 +40,17 @@
     <script type="text/javascript" src="lib/impact/impact.js"></script>
     <script type="text/javascript" src="lib/game/main.js"></script>
     <script type="text/javascript">
-      function on_click(e)
-      {
+      function on_click(e) {
         ig.game.start();
         e.parentNode.style.display = "none";
       }
 
-      function on_correct_answer()
-      {
+      function on_correct_answer() {
           console.log("correct");
+      }
+
+      function on_wrong_answer() {
+          console.log("wrong");
       }
     </script>
   </head>
